@@ -1,4 +1,5 @@
 0.11
+ - Improve datetime precision print.
 
 0.10 2023-04-23T10:57:02+02:00
  - Add doc for Wikibase::Datatype::Print::Lexeme.
